[package]
name = "virtualbow-slv"
version = "0.10.0"
edition = "2021"

[lib]
name = "virtualbow"
path = "src/lib.rs"

[[bin]]
name = "virtualbow-slv"
path = "src/bin.rs"

[dependencies]
nalgebra = { version = "0.33.0", features = ["serde-serialize", "rand"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["float_roundtrip"] }
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"]}
iter_num_tools = "0.7.1"
itertools = "0.13.0"
downcast-rs = "1.2.1"
unzip3 = "1.0.0"
rayon = "1.10.0"
fresnel = "0.1.0"
soa_derive = "0.13.0"
num = "0.4.3"
clap = { version = "4.5.7", features = ["derive"]}

[dev-dependencies]
approx = "0.5.1"
plotters = "0.3.6"
assert_matches = "1.5"
assert_cmd = "2.0.14"
predicates = "3.1.0"
spec_math = "0.1.5"